# riscv-inst-mutator

./: .gitignore  .gitmodules  Cargo.toml  FuzzerAPI.h  FuzzerCoverage.h  build.rs
dummy-target/: .gitignore  run.sh  target.cpp
src/: assembler.rs  calibration.rs  causes.rs  fuzz_ui.rs  generator.rs  instructions.rs  lib.rs  monitor.rs  mutator.rs  parser.rs  program_input.rs
tests/: fuzzer.rs
